Replace manual clamping logic with `Math.clamp` in `CurrentSong`.